--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Rock, Paper, Scissors</title>
 
-  Score
+  <!-- Score
   Rules
 
   You Picked
@@ -17,21 +18,40 @@
   You Win
   You Lose
 
-  Play Again
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  Play Again -->
+  <link rel="stylesheet" href="./style.css" />
 </head>
+
 <body>
-
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="container">
+    <header>
+      <div class="title">
+        <h1>Rock</h1>
+        <h1>Paper</h1>
+        <h1>Scissors</h1>
+      </div>
+      <div class="score-section">
+        <span>score</span>
+        <span class="score">12</span>
+      </div>
+    </header>
+    <main>
+      <button class="paper">
+        <img src="./images/icon-paper.svg" alt="Paper">
+      </button>
+      <button class="scissors">
+        <img src="./images/icon-scissors.svg" alt="Scissors">
+      </button>
+      <button class="rock">
+        <img src="./images/icon-rock.svg" alt="Rock">
+      </button>
+    </main>
+    <footer>
+      <button class="rules">Rules</button>
+    </footer>
   </div>
+
+  <script src="./main.js"></script>
 </body>
+
 </html>
