--- a/index.html
+++ b/index.html
@@ -1,24 +1,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
   <title>Frontend Mentor | Rock, Paper, Scissors</title>
-
-  <!-- Score
-  Rules
-
-  You Picked
-  The House Picked
-
-  You Win
-  You Lose
-
-  Play Again -->
   <link rel="stylesheet" href="./style.css" />
 </head>
 
@@ -29,25 +18,67 @@
         <h1>Rock</h1>
         <h1>Paper</h1>
         <h1>Scissors</h1>
+        <h1>Lizard</h1>
+        <h1>Spock</h1>
       </div>
       <div class="score-section">
         <span>score</span>
         <span class="score">12</span>
       </div>
     </header>
-    <main>
-      <button class="paper">
-        <img src="./images/icon-paper.svg" alt="Paper">
-      </button>
-      <button class="scissors">
-        <img src="./images/icon-scissors.svg" alt="Scissors">
-      </button>
-      <button class="rock">
-        <img src="./images/icon-rock.svg" alt="Rock">
-      </button>
-    </main>
+    <section class="step-one">
+      <div class="box-one">
+        <button class="scissors">
+          <img src="./images/icon-scissors.svg" alt="Scissors" />
+        </button>
+      </div>
+      <div class="box-two">
+        <button class="spock">
+          <img src="./images/icon-spock.svg" alt="Spock" />
+        </button>
+        <button class="paper">
+          <img src="./images/icon-paper.svg" alt="Paper" />
+        </button>
+      </div>
+      <div class="box-three">
+        <button class="lizard">
+          <img src="./images/icon-lizard.svg" alt="Lizard" />
+        </button>
+        <button class="rock">
+          <img src="./images/icon-rock.svg" alt="Rock" />
+        </button>
+      </div>
+    </section>
+    <section class="step-two">
+      <div class="title">
+        <h3>You Picked</h3>
+        <h3>the House Picked</h3>
+      </div>
+      <div class="cards">
+        <button class="lizard">
+          <img src="./images/icon-lizard.svg" alt="Lizard" />
+        </button>
+        <div class="result">
+          <h1>You Win!</h1>
+          <button>Try Again</button>
+        </div>
+        <button class="rock">
+          <img src="./images/icon-rock.svg" alt="Rock" />
+        </button>
+      </div>
+    </section>
+
+    <section class="rules">
+      <div class="title">
+        <h1>rules</h1>
+        <button class="close">
+          <img src="./images/icon-close.svg" alt="Close">
+        </button>
+      </div>
+      <img src="./images/image-rules-bonus.svg" alt="Rules">
+    </section>
     <footer>
-      <button class="rules">Rules</button>
+      <button class="rules-btn">Rules</button>
     </footer>
   </div>
 
